--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "burger-builder",
-  "homepage": "https://laxanarana1513.github.io/burger-builder",
+  "homepage": "https://laxanarana1513.github.io/burger_builder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
